<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dip">

    <TextView
        android:id="@+id/tv_info_id0"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="left|center_vertical"
        android:text="ID："
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_id1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignTop="@id/tv_info_id0"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_info_id0"
        android:gravity="left|center_vertical" />

    <TextView
        android:id="@+id/tv_info_ordername0"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_below="@id/tv_info_id0"
        android:layout_alignLeft="@id/tv_info_id0"
        android:layout_marginTop="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="left|center_vertical"
        android:text="@string/name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_ordername1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignTop="@id/tv_info_ordername0"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_info_ordername0"
        android:gravity="left|center_vertical" />

    <TextView
        android:id="@+id/tv_info_number0"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_below="@id/tv_info_ordername0"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="left|center_vertical"
        android:text="@string/number"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_number1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignTop="@id/tv_info_number0"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_info_number0"
        android:gravity="left|center_vertical" />

    <TextView
        android:id="@+id/tv_info_price0"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_below="@id/tv_info_number0"
        android:layout_alignLeft="@id/tv_info_price0"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="left|center_vertical"
        android:text="@string/price"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_price1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignTop="@id/tv_info_price0"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-2dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@id/tv_info_price0"
        android:gravity="left|center_vertical" />

    <TextView
        android:id="@+id/tv_info_totalprice0"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_below="@id/tv_info_price0"
        android:layout_alignLeft="@id/tv_info_price0"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="left|center_vertical"
        android:text="@string/totalprice"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_totalprice1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignTop="@id/tv_info_totalprice0"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_info_totalprice0"
        android:gravity="left|center_vertical" />

    <TextView
        android:id="@+id/tv_info_customer0"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_below="@id/tv_info_totalprice0"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="center_vertical|left"
        android:text="@string/customer"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_customer1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignTop="@id/tv_info_customer0"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_info_customer0"
        android:gravity="center_vertical|left" />

    <TextView
        android:id="@+id/tv_info_customerphone0"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_below="@id/tv_info_customer0"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="center_vertical|left"
        android:text="@string/customphone"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_customerphone1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignTop="@id/tv_info_customerphone0"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_info_customerphone0"
        android:gravity="center_vertical|left" />

    <TextView
        android:id="@+id/tv_info_datatime0"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_below="@id/tv_info_customerphone0"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="center_vertical|left"
        android:text="@string/data"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_datetime1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignTop="@id/tv_info_datatime0"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_info_datatime0"
        android:gravity="center_vertical|left" />

    <Button
        android:id="@+id/back_to_list_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="goBack"
        android:text="返回列表界面"></Button>
</RelativeLayout>